==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/targets/TARGET_Maxim/TARGET_MAX32620/spi_api.c <==
#include <string.h>
#include "mbed_assert.h"
#include "cmsis.h"
#include "spi_api.h"
#include "spi_multi_api.h"
#include "pinmap.h"
#include "ioman_regs.h"
#include "clkman_regs.h"
#include "PeripheralPins.h"
#define DEFAULT_CHAR    8
#define DEFAULT_MODE    0
#define DEFAULT_FREQ    1000000
#define SPI_MAX_BYTE_LEN     (MXC_CFG_SPI_FIFO_DEPTH * 2)
#define SPI_MAX_PAGE_LEN     (MXC_CFG_SPI_FIFO_DEPTH * 2)

void spi_init(spi_t *obj, PinName mosi, PinName miso, PinName sclk, PinName ssel)
{
    // Make sure pins are pointing to the same SPI instance
    SPIName spi_mosi = (SPIName)pinmap_peripheral(mosi, PinMap_SPI_MOSI);
    SPIName spi_miso = (SPIName)pinmap_peripheral(miso, PinMap_SPI_MISO);
    SPIName spi_sclk = (SPIName)pinmap_peripheral(sclk, PinMap_SPI_SCLK);
    SPIName spi_ssel = (SPIName)pinmap_peripheral(ssel, PinMap_SPI_SSEL);

    SPIName spi_data = (SPIName)pinmap_merge(spi_mosi, spi_miso);
    SPIName spi_cntl;

    // Give the application the option to manually control Slave Select
    if ((SPIName)spi_ssel != (SPIName)NC) {
        spi_cntl = (SPIName)pinmap_merge(spi_sclk, spi_ssel);
        // Slave select is currently limited to slave select zero. If others are
        // to be supported a function to map PinName to a value suitable for use
        // in mstr_cfg.slave_sel will be required.
        obj->spi.ssel = 0;
    } else {
        spi_cntl = spi_sclk;
        obj->spi.ssel = -1;
    }

    SPIName spi = (SPIName)pinmap_merge(spi_data, spi_cntl);

    MBED_ASSERT((SPIName)spi != (SPIName)NC);

    // Set the obj pointer to the proper SPI Instance
    obj->spi.spi = (mxc_spi_regs_t*)spi;

    // Set the SPI index and FIFOs
    obj->spi.index = MXC_SPI_GET_IDX(obj->spi.spi);
    obj->spi.fifo = MXC_SPI_GET_SPI_FIFO(obj->spi.index);

    // Configure the pins
    pinmap_pinout(mosi, PinMap_SPI_MOSI);
    pinmap_pinout(miso, PinMap_SPI_MISO);
    pinmap_pinout(sclk, PinMap_SPI_SCLK);
    pinmap_pinout(ssel, PinMap_SPI_SSEL);

#if DEVICE_SPI_ASYNCH
    // Configure default page size; size is known to async interface
    obj->spi.spi->mstr_cfg = (obj->spi.spi->mstr_cfg & ~MXC_F_SPI_MSTR_CFG_PAGE_SIZE) | MXC_S_SPI_MSTR_CFG_PAGE_32B;
#endif

    // Enable SPI and FIFOs
    obj->spi.spi->gen_ctrl = (MXC_F_SPI_GEN_CTRL_SPI_MSTR_EN |
                              MXC_F_SPI_GEN_CTRL_TX_FIFO_EN |
                              MXC_F_SPI_GEN_CTRL_RX_FIFO_EN );

    obj->spi.sclk = sclk;       // save the sclk PinName in the object as a key for Quad SPI pin mapping lookup
    spi_master_width(obj, 0);   // default this for Single SPI communications
}

void spi_format(spi_t *obj, int bits, int mode, int slave)
{
    // Check the validity of the inputs
    MBED_ASSERT(((bits >= 1) && (bits <= 32)) && ((mode >= 0) && (mode <= 3)));

    // Only supports master mode
    MBED_ASSERT(!slave);

    // Save formatting data
    obj->spi.bits = bits;

    // Set the mode
    MXC_SET_FIELD(&obj->spi.spi->mstr_cfg, MXC_F_SPI_MSTR_CFG_SPI_MODE, mode << MXC_F_SPI_MSTR_CFG_SPI_MODE_POS);
}

void spi_frequency(spi_t *obj, int hz)
{
    // Maximum frequency is half the system frequency
    MBED_ASSERT((unsigned int)hz <= (SystemCoreClock / 2));
    unsigned clocks = ((SystemCoreClock / 2) / hz);

    // Figure out the divider ratio
    int clk_div = 1;
    while (clk_div < 10) {
        if (clocks < 0x10) {
            break;
        }
        clk_div++;
        clocks = clocks >> 1;
    }

    // Turn on the SPI clock
    if (obj->spi.index == 0) {
        MXC_CLKMAN->sys_clk_ctrl_11_spi0 = clk_div;
    } else if (obj->spi.index == 1) {
        MXC_CLKMAN->sys_clk_ctrl_12_spi1 = clk_div;
    } else if (obj->spi.index == 2) {
        MXC_CLKMAN->sys_clk_ctrl_13_spi2 = clk_div;
    } else {
        MBED_ASSERT(0);
    }

    // Set the number of clocks to hold sclk high and low
    MXC_SET_FIELD(&obj->spi.spi->mstr_cfg, (MXC_F_SPI_MSTR_CFG_SCK_HI_CLK | MXC_F_SPI_MSTR_CFG_SCK_LO_CLK),
        ((clocks << MXC_F_SPI_MSTR_CFG_SCK_HI_CLK_POS) | (clocks << MXC_F_SPI_MSTR_CFG_SCK_LO_CLK_POS)));
}

int spi_master_write(spi_t *obj, int value)
{
    // set the fifo direction for full duplex, TX and RX simultaneously
    return spi_master_transaction(obj, value, MXC_S_SPI_FIFO_DIR_BOTH);
}

void spi_master_transfer(spi_t *obj, const void *tx, size_t tx_length, void *rx, size_t rx_length, uint8_t bit_width, uint32_t handler, uint32_t event, DMAUsage hint)
{
    MBED_ASSERT(tx_length == rx_length);
    MBED_ASSERT(bit_width == obj->spi.bits);

    // Save object reference for callback
    state[obj->spi.index] = &obj->spi;

    // Initialize request info
    obj->spi.tx_data = tx;
    obj->spi.rx_data = rx;
    obj->spi.len = tx_length;
    obj->spi.callback = (void(*)())handler;
    obj->spi.event = event;
    // Clear transfer state
    obj->spi.read_num = 0;
    obj->spi.write_num = 0;
    obj->spi.head_rem = 0;

    NVIC_EnableIRQ(MXC_SPI_GET_IRQ(obj->spi.index));

    obj->spi.spi->inten = spi_master_transfer_handler(obj);
}

uint32_t spi_irq_handler_asynch(spi_t *obj)
{
    mxc_spi_regs_t *spim = obj->spi.spi;
    uint32_t flags;

    // Clear the interrupt flags
    spim->inten = 0;
    flags = spim->intfl;
    spim->intfl = flags;

    // Figure out if this SPIM has an active request
    if (flags) {
        if ((spim->inten = spi_master_transfer_handler(obj)) != 0) {
            return 0;
        }
    }

    state[obj->spi.index] = NULL;

    return SPI_EVENT_COMPLETE;
}

uint8_t spi_active(spi_t *obj)
{
    mxc_spi_regs_t *spim = obj->spi.spi;

    // Check to see if there are any ongoing transactions
    if ((state[obj->spi.index] == NULL) &&
            !(spim->fifo_ctrl & MXC_F_SPI_FIFO_CTRL_TX_FIFO_USED)) {
        return 0;
    }

    return 1;
}

void spi_abort_asynch(spi_t *obj)
{
    mxc_spi_regs_t *spim = obj->spi.spi;

    // Disable interrupts, clear the flags
    spim->inten = 0;
    spim->intfl = spim->intfl;

    // Reset the SPIM to cancel the on ongoing transaction
    spim->gen_ctrl &= ~(MXC_F_SPI_GEN_CTRL_SPI_MSTR_EN);
    spim->gen_ctrl |= (MXC_F_SPI_GEN_CTRL_SPI_MSTR_EN);

    state[obj->spi.index] = NULL;
}

static void SPI_IRQHandler(int spim_num)
{
    if (state[spim_num] != NULL) {
        if (state[spim_num]->callback != NULL) {
            state[spim_num]->callback();
            return;
        }
    }
    mxc_spi_regs_t *spim = MXC_SPI_GET_SPI(spim_num);
    spim->inten = 0;
}
